[metadata]
name = hidamari
version = 2.0
author = jeffshee
author_email = jeffshee8969@gmail.com
description = Video wallpaper for Linux. Minimal and written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeffshee/hidamari
project_urls =
    Bug Tracker = https://github.com/jeffshee/hidamari/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pillow
    pydbus
    python-vlc
    youtube-dl
    PyGObject

[options.package_data]
server = dbus.xml
gui    = gui_v2.glade

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hidamari = hidamari.__main__:main
